<resources>
    <string name="app_name">barter.li</string>
    <string name="receiver_network">Network Change Receiver</string>
    <string name="team_heading">Team Members</string>
    <string name="action_settings">Settings</string>
    <string name="service_chat">Chat Service</string>
    <string name="scanactivity_title">Scan Barcode On Book</string>
    <string name="editbook_title">Add Book</string>
    <string name="editbook_title2">Edit Book</string>
    <string name="chat_fragment_title">Chats</string>
    <string name="Report_fragment_title">Report</string>
    <string name="Collaborate_fragment_title">Collaborate</string>
    <string name="Opensource_fragment_title">Open Source</string>
    <string name="Aboutus_fragment_title">About us</string>
    <string name="Tribute_fragment_title">Tribute</string>
    <string name="Book_Detail_fragment_title">Book Detail</string>
    <string name="update_info">Update Info</string>
     <string name="preferred_location">Preferred location</string>
     <string name="forgot_password"><u>Forgot password</u></string>
     <string name="enable_location">Enable location</string>
     <string name="enable">Enable</string>
     <string name="enable_location_message">Please enable your location settings for getting nearby books</string>
    <string name="cancel">Cancel</string>
    <string name="about_me">About me</string>
    <string name="my_books">My Books</string>
    <string name="no_image_text">No Image</string>
    <string name="no_books_found_nearby">No books found near you</string>
    <string name="no_books_found_nearby_on_nobooks">Be the first one to add book</string>
    <string name="no_places_found_nearby">No places found near you</string>
    <string name="loading">loading books please wait &#8230;</string>
    <string name="try_again"><u>Try Again</u></string>
    <string name="refresh_page"><u>Refresh</u></string>
    <string name="or">or</string>
    <string name="add_your_own"><u>Add Your Own</u></string>
    <string name="add"><u>Add</u></string>
    <string name="add_location_manually"><u>Add Your Current Location</u></string>
    <string name="logout">Logout</string>
    <string name="delete_chat_alert_message">Are you sure you want to delete this chat?</string>
    <string name="block_user_alert_message">Are you sure you want to block this user?</string>
    <string name="crouton_map_message">Navigate to the location where you want to see books and swap left</string>
    <string name="crouton_prefferedlocation_message">Please Select Your Book Exchange Point Where You Would Like To Deal</string>
    <string name="add_location_message">Please select your preferred location</string>
    <string name="signup">Sign Up</string>
    <string name="build_library">Build Library</string>
    <string name="search">Search Books</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="welcome_fb">Welcome %s!</string>
    <string name="welcome_to_barterli">Welcome to barter.li!</string>
    <string name="location_pref_set">We have remembered your preferred location.</string>
    <string name="profile">Profile</string>
    <string name="library">My Books</string>
    <string name="scan_book">Scan Book</string>
    <string name="refresh">Refresh</string>
    <string name="add_book">Add Book</string>
    <string name="add_manually">Add Book Manually</string>
    <string name="no_network_connection">No network connection!</string>
    <string name="meters_away">%d meters away</string>
    <string name="send">Send</string>
    <string name="enter_message">Enter your message</string>
    <string name="new_messages">%d new messages!</string>
    <string name="chat_opened_from" formatted="false">This chat was opened from %s.</string>
    <string name="take_picture">Take Picture</string>
    <string name="add_book_dialog_head">Add Book</string>
    <string name="chat_longclick_dialog_head">Chat Options</string>
    <string name="complete_action_using">Complete action using</string>
    <string name="no_books_found">No books were found in this area.</string>
    <string name="no_more_books_found">No more books were found.</string>
    <string name="location_format" formatted="false">%s, %s</string>
    <string name="search_hint">Search by Title|Author|ISBN</string>
    <string name="search_by_author_hint">Search by Author</string>
    <string name="scan_barcode_button_label">Scan ISBN BarCode</string>
    <string name="add_new_book_label">Manual Entry</string>
    <string name="search_for_books">Search for books</string>
    <string name="share">share</string>
    <string name="set_sell_hint">Set Price (eg $10)</string>
    <string name="set_lend_hint">Set Lend Price (eg $10)</string>
    <string name="isbn_label">ISBN Number</string>
    <string name="title_label">Book Title</string>
    <string name="author_label">Author</string>
    <string name="description_label">Description</string>
    <string name="bartertype_label">Book Listed For</string>
    <string name="publication_year_label">Publication Year</string>
    <string name="suggested_price_label">Suggested Price</string>
    <string name="publication_month_label">Publication Month</string>
    <string name="publication_date_label">Publication</string>
    <string name="barter_type_label">Barter Type</string>
    <string name="error_enter_title">Enter a book title</string>
    <string name="book_added">Book has been added!</string>
    <string name="select_a_barter_type">Select at least one barter type to add the book</string>
    <string name="unable_to_fetch_book_info">Unable to fetch book info.</string>
    <string name="unable_to_create_book">Unable to create book</string>
    <string name="not_a_valid_isbn">Not a valid ISBN.</string>
    <string name="unable_to_fetch_books">Unable to fetch books.</string>
    <string name="unable_to_fetch_hangouts">Unable to fetch hangouts.</string>
    <string name="error_enter_email">Please enter your email address.</string>
    <string name="error_enter_token">Please enter your token</string>
    <string name="error_block_user">User cannot be blocked this time, Please try again later</string>
    <string name="error_invalid_email">Please enter a valid email address.</string>
    <string name="error_enter_password">Please enter a password.</string>
    <string name="error_password_minimum_length">Password must be at least %d characters long.</string>
    <string name="error_unable_to_login">Unable to login.</string>
    <string name="error_unable_to_set_preferred_location">Unable to set preferred location for user.</string>
    <string name="error_not_connected_to_chat_service">Not connected to chat service.</string>
    <string name="error_unable_to_send_chat">Not able to send chat message</string>
    <string name="no_personal_info_bug_and_suggest">Please don\'t include any personally identifiable information(email, name, phone number, address, etc) as this bug report or feature suggestion will be available publicly.</string>
    <string name="no_personal_info_suggest">Please don\'t include any personally identifiable information(email, name, phone number, address, etc) as this feature suggestion will be available publicly.</string>
	<string name="token_email_message">Token is emailed to you</string>
    <string name="error_required">Required</string>
    <string name="delete">Delete</string>
    <string name="help_select_location">In order to protect your privacy, we don\'t reveal your location to anybody.\n\nInstead, please select a nearby venue from the list. This will be set as your preferred location for exchanging books. You can change this from your profile page anytime.</string>
    <string name="hint_location_name">Enter preferred location name</string>
    <string name="about">About</string>
    <string name="ok">OK</string>
    <string name="give_away">Give Away</string>
    <string name="barter">Barter</string>
    <string name="sell">Sell</string>
    <string name="read">Read</string>
    <string name="lend">Lend</string>
    <string name="keep_private">Keep Private</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="chat_with_owner">Chat with owner</string>
    <string name="owner_profile">Book Owner</string>
    <string name="owner_location">Owner\'s Preferred Barter Location</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="email_label">Email Id</string>
    <string name="token_label">Token</string>
    <string name="new_password_label">New password</string>
    <string name="confirm_password_label">Confirm password</string>
    <string name="password_label">Password</string>
    <string name="share_via">Share Via</string>
    <string name="lat_long">Location</string>
    <string name="select_preferred_location_hint">Select your preferred Meeting Location</string>
    <string-array name="nav_drawer_titles">
        <item>My Profile</item>
        <item>Chats</item>
        <item>Report a Crash</item>
        <item>Share</item>
        <item>Rate Us</item>
        <item>About us</item>
    </string-array>
    <string-array name="nav_drawer_descriptions">
        <item>Check out your profile</item>
        <item>Your ongoing chats</item>
        <item>or a suggestion</item>
        <item>Share barter.li with your friends</item>
        <item></item>
        <item>What is barter.li</item>
    </string-array>
    <string-array name="take_photo_choices">
        <item>Capture from Camera</item>
        <item>Add from Gallery</item>
    </string-array>
    <string-array name="add_book_choices">
        <item>Scan  Barcode</item>
        <item>Add Manually</item>
    </string-array>
    <string-array name="chat_longclick_choices">
        <item>Delete Chat</item>
        <item>Block User</item>
    </string-array>
    <string name="sending">&#8230;</string>
    <string name="failed">failed</string>
    <string name="trueflag">true</string>
    <string name="success_message_for_chatblock">User blocked successfully</string>
    <string-array name="aboutus_fragment_titles">
        <item>Tribute</item>
        <item>barter.li</item>
        <item>Team</item>
        <item>Collaborate</item>
        <item>Attributions</item>
    </string-array>
    <string name="tribute_message">A tribute to Aaron Swartz for inspiring us with his passion</string>
    <string name="app_share_message">Enter the local book community. Download the android app - </string>
    <string name="subject">Get access to barter.li</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>Decenber</item>
    </string-array>
    <string name="local_profile_image">barterli_avatar_small.png</string>
    <string name="image_profile_pic_description">Profile Picture</string>
    <string name="text_default_profile_name">Profile Name</string>
    <string name="text_profile_description">Short information about you.</string>
    <string name="button_edit_preferred_location">Edit Preferred Location</string>
    <string name="text_default_current_location">Set your preferred Location</string>
    <string name="label_about_me">Something About Me</string>
    <string name="label_current_location">Preferred Cafe For Book Exchange</string>
    <string name="label_referral_count">Number of installs via me</string>
    <string name="text_edit_profile">Edit</string>
    <string name="text_save_profile">Save</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name(optional)</string>
</resources>