<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Group to hide action items when navigation drawer is opened -->
    <group android:id="@+id/group_hide_on_drawer_open" >
        <item
            android:id="@+id/action_scan_book"
            android:orderInCategory="1"
            android:showAsAction="never"
            android:title="@string/scan_book"/>
        <item
            android:id="@+id/action_add_book"
            android:orderInCategory="2"
            android:showAsAction="never"
            android:title="@string/add_book"/>
        <item
            android:id="@+id/action_profile"
            android:orderInCategory="3"
            android:showAsAction="never"
            android:title="@string/profile"/>
        <item
            android:id="@+id/action_my_books"
            android:orderInCategory="4"
            android:showAsAction="never"
            android:title="@string/library"/>
    </group>

</menu>