<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2014, barter.li
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:padding="@dimen/activity_margin" >

    <LinearLayout
        android:id="@+id/layout_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <li.barter.widgets.autocomplete.NetworkedAutoCompleteTextView
            android:id="@+id/edit_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:hint="@string/title_label"
            android:inputType="textCapWords"
            android:singleLine="true"
            app:fontStyle="regular" />

        <li.barter.widgets.TypefacedAutoCompleteTextView
            android:id="@+id/edit_text_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:hint="@string/author_label"
            android:inputType="textCapWords"
            android:singleLine="true"
            app:fontStyle="regular" />

        <li.barter.widgets.TypefacedEditText
            android:id="@+id/edit_text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:hint="@string/description_label"
            android:inputType="textCapSentences|textAutoComplete|textMultiLine"
            app:fontStyle="regular" />

        <li.barter.widgets.TypefacedEditText
            android:id="@+id/edit_text_isbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:hint="@string/isbn_label"
            android:inputType="number"
            android:singleLine="true"
            app:fontStyle="regular" />

        <LinearLayout
            android:id="@+id/layout_barter_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <li.barter.widgets.TypefacedCheckBox
                    android:id="@+id/checkbox_barter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="true"
                    android:text="@string/barter"
                    app:fontStyle="condensed_regular" />

                <li.barter.widgets.TypefacedCheckBox
                    android:id="@+id/checkbox_read"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="@string/read"
                    android:visibility="gone"
                    app:fontStyle="condensed_regular" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal" >

                <li.barter.widgets.TypefacedCheckBox
                    android:id="@+id/checkbox_sell"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="@string/sell"
                    app:fontStyle="condensed_regular" />

                <li.barter.widgets.TypefacedCheckBox
                    android:id="@+id/checkbox_wishlist"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                      android:visibility="gone"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="@string/lend"
                    app:fontStyle="condensed_regular" />
            </LinearLayout>

            <li.barter.widgets.TypefacedEditText
                android:id="@+id/edit_sell_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/set_sell_hint"
                android:visibility="gone"
                app:fontStyle="condensed_regular" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <li.barter.widgets.TypefacedCheckBox
                    android:id="@+id/checkbox_give_away"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                      android:visibility="gone"
                    android:checked="false"
                    android:text="@string/give_away"
                    app:fontStyle="condensed_regular" />

                <li.barter.widgets.TypefacedCheckBox
                    android:id="@+id/checkbox_keep_private"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="false"
                      android:visibility="gone"
                    android:text="@string/keep_private"
                    app:fontStyle="condensed_regular" />
            </LinearLayout>
        </LinearLayout>

        <li.barter.widgets.TypefacedButton
            android:id="@+id/button_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:text="@string/delete"
            android:visibility="gone"
            app:fontStyle="bold" />

        <li.barter.widgets.TypefacedButton
            android:id="@+id/button_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:text="@string/submit"
            app:fontStyle="bold" />
    </LinearLayout>

</ScrollView>