<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:padding="@dimen/activity_horizontal_margin" >

    <LinearLayout
        android:id="@+id/layout_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <com.barterli.android.widgets.TypefacedAutoCompleteTextView
            android:id="@+id/edit_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/title_label"
            app:fontStyle="alegreya_regular" />
        
        <com.barterli.android.widgets.TypefacedAutoCompleteTextView
            android:id="@+id/edit_text_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:inputType="textCapWords"
            android:hint="@string/author_label"
            app:fontStyle="alegreya_regular" />
        
         <com.barterli.android.widgets.TypefacedEditText
            android:id="@+id/edit_text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:inputType="textCapSentences|textAutoComplete|textMultiLine"
            android:maxLines="8"
            android:lines="3"
            android:hint="@string/description_label"
            app:fontStyle="alegreya_regular" />
         
         <com.barterli.android.widgets.TypefacedEditText
            android:id="@+id/edit_text_publication_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:singleLine="true"
            android:hint="@string/publication_year_label"
            app:fontStyle="alegreya_regular" />

        <com.barterli.android.widgets.TypefacedButton
            android:id="@+id/barter_option_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addBook"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/barter_type_label"
            app:fontStyle="alegreya_bold" />

        <com.barterli.android.widgets.TypefacedButton
            android:id="@+id/submit_book_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:onClick="addBook"
            android:text="@string/submit"
            app:fontStyle="alegreya_bold" />
    </LinearLayout>

</ScrollView>