<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2014, barter.li
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:padding="@dimen/activity_margin" >

    <LinearLayout
        android:id="@+id/layout_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <li.barter.widgets.TypefacedButton
            android:id="@+id/button_facebook_login"
            style="@style/ButtonAppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:background="@drawable/selector_facebook_login"
            android:text="@string/login_with_facebook"
            android:textColor="@color/white"
            app:fontStyle="alegreya_bold" />

        <li.barter.widgets.TypefacedButton
            android:id="@+id/button_google_login"
            style="@style/ButtonAppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:background="@drawable/selector_google_login"
            android:text="@string/login_with_google"
            android:textColor="@color/white"
            app:fontStyle="alegreya_bold" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/activity_margin"
            android:background="@color/dark_gray" />

        <li.barter.widgets.TypefacedEditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:hint="@string/email_label"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            app:fontStyle="alegreya_regular" />

        <li.barter.widgets.TypefacedAutoCompleteTextView
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:hint="@string/password_label"
            android:inputType="textPassword"
            android:singleLine="true"
            app:fontStyle="alegreya_regular" />

        <li.barter.widgets.TypefacedButton
            android:id="@+id/button_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:text="@string/submit"
            app:fontStyle="alegreya_bold" />
    </LinearLayout>

</ScrollView>
